--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,6 +3,8 @@
     <link rel="stylesheet" href="src/index.css">
 </head>
 <body>
-    TEMPLATE HELLO :)
+    <input id="first">
+    <input id="second">
+    <button id="submit">Submit</button>
     <script type="module" src="src/index.js"></script>
 </body>
