--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,6 +3,7 @@
     <link rel="stylesheet" href="src/index.css">
 </head>
 <body>
+    <span id="span"></span>
     <input id="first">
     <input id="second">
     <button id="submit">Submit</button>
