Updated Logic, Basic Functionality

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,8 +4,16 @@
 </head>
 <body>
     <span id="span"></span>
-    <input id="first">
+    <input id="name">
     <input id="second">
+    <input id="cgcc" type="radio" name="college" value="CGC08">
+    <label for="cgcc">CGCC</label>
+    <input id="emcc" type="radio" name="college" value="EMC10">
+    <label for="emcc">EMCC</label>
+    <input id="gwcc" type="radio" name="college" value="GWC03">
+    <label for="gwcc">GWCC</label>
+    <input id="gcc" type="radio" name="college" value="GCC02">
+    <label for="gcc">GCC</label>
     <button id="submit">Submit</button>
     <script type="module" src="src/index.js"></script>
 </body>
