--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,19 +1,36 @@
 <!DOCTYPE html>
+
 <head>
     <link rel="stylesheet" href="src/index.css">
 </head>
+
 <body>
-    <span id="span"></span>
-    <input id="name">
-    <input id="second">
-    <input id="cgcc" type="radio" name="college" value="CGC08">
-    <label for="cgcc">CGCC</label>
-    <input id="emcc" type="radio" name="college" value="EMC10">
-    <label for="emcc">EMCC</label>
-    <input id="gwcc" type="radio" name="college" value="GWC03">
-    <label for="gwcc">GWCC</label>
-    <input id="gcc" type="radio" name="college" value="GCC02">
-    <label for="gcc">GCC</label>
+    <div id="app">
+        <span id="span"></span>
+        <input id="name">
+        <input id="second">
+        <input id="cgcc" type="checkbox" name="college" value="CGC08">
+        <label for="cgcc">CGCC</label>
+        <input id="emcc" type="checkbox" name="college" value="EMC10">
+        <label for="emcc">EMCC</label>
+        <input id="gwcc" type="checkbox" name="college" value="GWC03">
+        <label for="gwcc">GWCC</label>
+        <input id="gcc" type="checkbox" name="college" value="GCC02">
+        <label for="gcc">GCC</label>
+        <input id="mcc" type="checkbox" name="college" value="MCC04">
+        <label for="mcc">MCC</label>
+        <input id="pvcc" type="checkbox" name="college" value="PVC09">
+        <label for="pvcc">PVCC</label>
+        <input id="pc" type="checkbox" name="college" value="PCC01">
+        <label for="pc">PC</label>
+        <input id="rsc" type="checkbox" name="college" value="RSC06">
+        <label for="rsc">RSC</label>
+        <input id="scc" type="checkbox" name="college" value="SCC05">
+        <label for="scc">SCC</label>
+        <input id="smc" type="checkbox" name="college" value="SMC07">
+        <label for="smc">SMC</label>
+        <div id="time"></div>
+    </div>
     <button id="submit">Submit</button>
     <script type="module" src="src/index.js"></script>
 </body>
