Updated Cartesian Product & Filtering

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,7 @@
 
 <body>
     <div id="app">
-        <h1>Schedule Creator</h1>
+        <h1>In-Person Schedule Creator</h1>
         <div>
             <span>Input Course Names</span>
             <input id="name">
