--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,7 +11,7 @@
         <h1>In-Person Schedule Creator</h1>
         <div>
             <span>Input Course Names</span>
-            <input id="name">
+            <input id="name" maxlength="6">
             <button id="add">Add</button>
             <button id="clear">Clear</button>
             <button id="submit">Submit</button>
